@@ -247,7 +247,7 @@ public class AppBookService {
 
         Specification<BookEntity> spec = AppBookSpecification.combine(
                 AppBookSpecification.notDeleted(),
-                AppBookSpecification.hasDigitalFile(),
+                AppBookSpecification.hasDigitalFileOrIsPhysical(),
                 AppBookSpecification.inLibraries(accessibleLibraryIds),
                 AppBookSpecification.searchText(query)
         );
@@ -276,7 +276,7 @@ public class AppBookService {
         return topIds.stream()
                 .filter(enrichedMap::containsKey)
                 .map(id -> mobileBookMapper.toSummary(enrichedMap.get(id), progressMap.get(id)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<AppBookSummary> getContinueListening(Integer limit) {
@@ -299,7 +299,7 @@ public class AppBookService {
         return topIds.stream()
                 .filter(enrichedMap::containsKey)
                 .map(id -> mobileBookMapper.toSummary(enrichedMap.get(id), progressMap.get(id)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<AppBookSummary> getRecentlyAdded(Integer limit) {
@@ -311,7 +311,7 @@ public class AppBookService {
 
         Specification<BookEntity> spec = AppBookSpecification.combine(
                 AppBookSpecification.notDeleted(),
-                AppBookSpecification.hasDigitalFile(),
+                AppBookSpecification.hasDigitalFileOrIsPhysical(),
                 AppBookSpecification.inLibraries(accessibleLibraryIds),
                 AppBookSpecification.addedWithinDays(30)
         );
@@ -322,7 +322,7 @@ public class AppBookService {
 
         return bookPage.getContent().stream()
                 .map(book -> mobileBookMapper.toSummary(book, progressMap.get(book.getId())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<AppBookSummary> getRecentlyScanned(Integer limit) {
@@ -344,7 +344,7 @@ public class AppBookService {
 
         return bookPage.getContent().stream()
                 .map(book -> mobileBookMapper.toSummary(book, progressMap.get(book.getId())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public AppPageResponse<AppBookSummary> getRandomBooks(
@@ -404,9 +404,9 @@ public class AppBookService {
         List<AppBookSummary> summaries = orderedBookIds.stream()
                 .map(bookEntitiesById::get)
                 .filter(Objects::nonNull)
-                .filter(BookEntity::hasFiles)
+                .filter(b -> b.hasFiles() || Boolean.TRUE.equals(b.getIsPhysical()))
                 .map(bookEntity -> mobileBookMapper.toSummary(bookEntity, progressMap.get(bookEntity.getId())))
-                .collect(Collectors.toList());
+                .toList();
 
         return AppPageResponse.of(summaries, pageNum, pageSize, booksPage.getTotalElements());
     }
@@ -573,7 +573,7 @@ public class AppBookService {
                 "FROM UserBookProgressEntity ubp " +
                 "WHERE ubp.user.id = :userId AND ubp.personalRating IS NOT NULL " +
                 "AND ubp.book.id IN (SELECT b.id FROM BookEntity b WHERE (b.deleted IS NULL OR b.deleted = false) " +
-                "AND b.bookFiles IS NOT EMPTY " +
+                "AND (b.bookFiles IS NOT EMPTY OR b.isPhysical = true) " +
                 scopeClause + ") " +
                 "GROUP BY 1 ORDER BY 1 DESC";
         var prQ = entityManager.createQuery(personalRatingQuery, Tuple.class);
@@ -624,7 +624,7 @@ public class AppBookService {
         String creatorJpql = "SELECT cr.name, mapping.role, COUNT(DISTINCT b.id) FROM BookEntity b"
                 + " JOIN b.metadata m JOIN m.comicMetadata cm JOIN cm.creatorMappings mapping JOIN mapping.creator cr"
                 + " WHERE (b.deleted IS NULL OR b.deleted = false)"
-                + " AND b.bookFiles IS NOT EMPTY"
+                + " AND (b.bookFiles IS NOT EMPTY OR b.isPhysical = true)"
                 + " " + scopeClause
                 + " GROUP BY cr.name, mapping.role ORDER BY COUNT(DISTINCT b.id) DESC";
         var creatorQ = entityManager.createQuery(creatorJpql, Tuple.class);
@@ -800,7 +800,7 @@ public class AppBookService {
 
         List<Specification<BookEntity>> specs = new ArrayList<>();
         specs.add(AppBookSpecification.notDeleted());
-        specs.add(AppBookSpecification.hasDigitalFile());
+        specs.add(AppBookSpecification.hasDigitalFileOrIsPhysical());
 
         if (accessibleLibraryIds != null) {
             if (req.libraryId() != null && accessibleLibraryIds.contains(req.libraryId())) {
@@ -1105,7 +1105,7 @@ public class AppBookService {
     private Specification<BookEntity> buildBaseSpecification(Set<Long> accessibleLibraryIds, Long libraryId) {
         List<Specification<BookEntity>> specs = new ArrayList<>();
         specs.add(AppBookSpecification.notDeleted());
-        specs.add(AppBookSpecification.hasDigitalFile());
+        specs.add(AppBookSpecification.hasDigitalFileOrIsPhysical());
 
         if (accessibleLibraryIds != null) {
             if (libraryId != null && !accessibleLibraryIds.contains(libraryId)) {
@@ -1132,7 +1132,7 @@ public class AppBookService {
 
         List<AppBookSummary> summaries = books.stream()
                 .map(book -> mobileBookMapper.toSummary(book, progressMap.get(book.getId())))
-                .collect(Collectors.toList());
+                .toList();
 
         return AppPageResponse.of(summaries, pageNum, pageSize, bookPage.getTotalElements());
     }
@@ -1155,7 +1155,7 @@ public class AppBookService {
         String jpql = "SELECT " + selectExpr + ", COUNT(DISTINCT b.id) FROM BookEntity b"
                 + " " + joins
                 + " WHERE (b.deleted IS NULL OR b.deleted = false)"
-                + " AND b.bookFiles IS NOT EMPTY"
+                + " AND (b.bookFiles IS NOT EMPTY OR b.isPhysical = true)"
                 + (extraWhere.isEmpty() ? "" : " " + extraWhere)
                 + " " + scopeClause
                 + " GROUP BY " + selectExpr + " ORDER BY COUNT(DISTINCT b.id) DESC";
@@ -1208,7 +1208,7 @@ public class AppBookService {
                 + " AND ubp.book.id IN ("
                 + "   SELECT b.id FROM BookEntity b"
                 + "   WHERE (b.deleted IS NULL OR b.deleted = false)"
-                + "   AND b.bookFiles IS NOT EMPTY"
+                + "   AND (b.bookFiles IS NOT EMPTY OR b.isPhysical = true)"
                 + " " + scopeClause
                 + " )"
                 + " GROUP BY ubp.readStatus ORDER BY COUNT(DISTINCT ubp.book.id) DESC";
@@ -1223,7 +1223,7 @@ public class AppBookService {
 
         String baseQuery = "SELECT COUNT(DISTINCT b.id) FROM BookEntity b"
                 + " WHERE (b.deleted IS NULL OR b.deleted = false)"
-                + " AND b.bookFiles IS NOT EMPTY"
+                + " AND (b.bookFiles IS NOT EMPTY OR b.isPhysical = true)"
                 + " AND b.id NOT IN ("
                 + "   SELECT ubp.book.id FROM UserBookProgressEntity ubp WHERE ubp.user.id = :userId"
                 + " )"
@@ -1262,7 +1262,7 @@ public class AppBookService {
             String scopeClause, Set<Long> accessibleLibraryIds,
             Long libraryId, Long shelfId, Set<Long> magicBookIds) {
         String jpql = "SELECT " + caseExpr + ", COUNT(DISTINCT b.id) FROM BookEntity b " + joins +
-                " WHERE (b.deleted IS NULL OR b.deleted = false) AND b.bookFiles IS NOT EMPTY "
+                " WHERE (b.deleted IS NULL OR b.deleted = false) AND (b.bookFiles IS NOT EMPTY OR b.isPhysical = true) "
                 + extraWhere + " " + scopeClause +
                 " GROUP BY 1";
         var q = entityManager.createQuery(jpql, Tuple.class);
